Added cheat sunscreen beacon for server admins or testers

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -120,6 +120,7 @@ tile.vampirism.weaponTable.name=Hunter Weapon Table
 tile.vampirism.weaponTable.cannot_use=You have not learned how to use this
 tile.vampirism.bloodPotionTable.name=Blood Potion Table
 tile.vampirism.bloodPotionTable.cannot_use=You have not learned how to use this
+tile.vampirism.sunscreenBeacon.name=Sunscreen Beacon
 
 
 #ITEMS
