Added vampire book as requirement for leveling up as a vampire Made village piece trainer use loot table Added vampire dungeon to be generated Added LootHandler to use loot table (own ones or ones that are injected into vanilla ones)

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -171,6 +171,7 @@ item.vampirism.weakHumanHeart.name=Weak Human Heart
 item.vampirism.item_tent.name=Tent
 item.vampirism.concentratedGarlic.name=Concentrated Garlic
 item.vampirism.garlic_bomb.name=Garlic Bomb
+item.vampirism.vampireBook.name=Vampire Book
 
 
 #KEYS
