Added hunter style hats as headwear

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -177,8 +177,8 @@ item.vampirism.armorOfSwiftness.head.name=Helmet of Swiftness
 item.vampirism.armorOfSwiftness.chest.name=Chestplate of Swiftness
 item.vampirism.armorOfSwiftness.legs.name=Leggings of Swiftness
 item.vampirism.armorOfSwiftness.feet.name=Boots of Swiftness
-
-
+item.vampirism.hunterHat0.head.name=Hunter Hat
+item.vampirism.hunterHat1.head.name=Hunter Hat
 
 
 #KEYS
