--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -306,9 +306,9 @@ text.vampirism.no_dracula_to_call=Dracula is dead and cannot be called
 text.vampirism.outdated=You are running Vampirism %s, the latest version is %s.
 text.vampirism.update_message=["Click for... [",{"text":"Download","color":"green","hoverEvent":{"action":"show_text","value":{"text":"Click this to go to the download page","color":"green"}},"clickEvent":{"action":"open_url","value":"@download@"}},"] [",{"text":"Website","color":"green","hoverEvent":{"action":"show_text","value":{"text":"Click this to go to the mod's forum page","color":"green"}},"clickEvent":{"action":"open_url","value":"@forum@"}},"] [",{"text":"Changelog","color":"green","hoverEvent":{"action":"show_text","value":{"text":"Click this see the version's Changelog","color":"green"}},"clickEvent":{"action":"run_command","value":"/vampirism changelog"}},"]"]
 text.vampirism.action.cooldown_not_over=Cooldown is not over yet
-text.vampirism.itemType.normal=Normal
-text.vampirism.itemType.enhanced=Enhanced
-text.vampirism.itemType.ultimate=Ultimate
+text.vampirism.itemTier.normal=Normal
+text.vampirism.itemTier.enhanced=Enhanced
+text.vampirism.itemTier.ultimate=Ultimate
 text.vampirism.poisonous_to_vampires=Poisonous to vampires
 text.vampirism.deals_more_damage_to=Deals %s percent more damage against
 
