--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -71,6 +71,7 @@ text.vampirism.skill.blood_potion_identify_some.desc=Get to know some of the eff
 text.vampirism.skill.tech_weapons=Technology
 text.vampirism.skill.tech_weapons.desc=Learn how to build some advanced weapons
 text.vampirism.skill.enhanced_armor=Enhanced armor
+text.vampirism.skill.enhanced_weapons=Enhanced weapons
 
 #BLOOD POTIONS
 text.vampirism.blood_potion.might_cause=Might cause:
@@ -180,6 +181,11 @@ item.vampirism.armorOfSwiftness.feet.name=Boots of Swiftness
 item.vampirism.hunterHat0.head.name=Hunter Hat
 item.vampirism.hunterHat1.head.name=Hunter Hat
 item.vampirism.hunterAxe.name=Hunter Axe
+item.vampirism.hunterCoat.head.name=Hunter Coat Helmet
+item.vampirism.hunterCoat.chest.name=Hunter Coat
+item.vampirism.hunterCoat.legs.name=Hunter Coat Leggings
+item.vampirism.hunterCoat.feet.name=Hunter Coat Boots
+
 
 
 #KEYS
@@ -308,7 +314,7 @@ text.vampirism.update_message=["Click for... [",{"text":"Download","color":"gree
 text.vampirism.action.cooldown_not_over=Cooldown is not over yet
 text.vampirism.itemTier.normal=Normal
 text.vampirism.itemTier.enhanced=Enhanced
-text.vampirism.itemTier.ultimate=Ultimate
+text.vampirism.itemTier.ultimate=Special
 text.vampirism.poisonous_to_vampires=Poisonous to vampires
 text.vampirism.deals_more_damage_to=Deals %s percent more damage against
 
